# ping-pong-robot

./: Installation manual.docx  InstallationManual.md  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/kinova_msgs/: AddPoseToCartesianTrajectory.h  AddPoseToCartesianTrajectoryRequest.h  AddPoseToCartesianTrajectoryResponse.h  ArmJointAnglesAction.h  ArmJointAnglesActionFeedback.h  ArmJointAnglesActionGoal.h  ArmJointAnglesActionResult.h  ArmJointAnglesFeedback.h  ArmJointAnglesGoal.h  ArmJointAnglesResult.h  ArmPoseAction.h  ArmPoseActionFeedback.h  ArmPoseActionGoal.h  ArmPoseActionResult.h  ArmPoseFeedback.h  ArmPoseGoal.h  ArmPoseResult.h  Arm_KinovaPoseAction.h  Arm_KinovaPoseActionFeedback.h  Arm_KinovaPoseActionGoal.h  Arm_KinovaPoseActionResult.h  Arm_KinovaPoseFeedback.h  Arm_KinovaPoseGoal.h  Arm_KinovaPoseResult.h  CartesianForce.h  ClearTrajectories.h  ClearTrajectoriesRequest.h  ClearTrajectoriesResponse.h  FingerPosition.h  HomeArm.h  HomeArmRequest.h  HomeArmResponse.h  JointAngles.h  JointTorque.h  JointVelocity.h  KinovaPose.h  PoseVelocity.h  RunCOMParametersEstimation.h  RunCOMParametersEstimationRequest.h  RunCOMParametersEstimationResponse.h  (+31 more)
devel/include/pingpong/: Kinematics.h
devel/lib/kinova_arm_moveit_demo/: motion_plan  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  joint_trajectory_action_server  kinova_arm_driver  kinova_tf_updater
devel/lib/pingpong/: ball  basic_listener  basic_moveit  basic_talker  fake_robot  interceptor  move_cpp  pepe_moveit  projectile  robot  vision
devel/lib/pkgconfig/: j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  kinova_arm_moveit_demo.pc  kinova_bringup.pc  kinova_control.pc  kinova_demo.pc  kinova_description.pc  kinova_driver.pc  kinova_gazebo.pc  kinova_msgs.pc  m1n6s300_ikfast.pc  m1n6s300_moveit_config.pc  pingpong.pc
src/pingpong/: CMakeLists.txt
src/pingpong/include/: ball.h
src/pingpong/launch/: demo.launch
src/pingpong/msg/: Kinematics.msg
src/pingpong/src/: ball.cpp  interceptor.cpp  robot.cpp  vision.cpp
(+154 files in other folders)
